# prb_calc

./: README.md  pyproject.toml
src/prb_calc/: __init__.py  prb_calc.py
src/prb_calc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_latency.py  test_to_bps.py  test_to_prb.py
