[project]
name = "prb_calc"
version = "0.0.1"
authors = [
  { name="gckopper", email="41166074+gckopper@users.noreply.github.com" },
]
description = "A small package to calculate the ratio of PRBs required to achieve a given speed"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gckopper/prb_calc"
Issues = "https://github.com/gckopper/prb_calc/issues"
